[package]
name = "BlkChain0"
version = "0.1.0"
authors = ["vivien98 <nadkarniv4198@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
bincode = "1.3.2"
serde = "1.0.125"
hex = "0.4.3"
log = "0.4.14"
